--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -21,5 +21,5 @@
         android:icon="@drawable/img_logout"
         android:onClick="logoutClick"
         android:title="@string/log_out"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="never" />
 </menu>
