--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -67,39 +67,42 @@
 
     </LinearLayout>
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_margin="5dp"
+        android:gravity="center">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/img_title"
+            android:contentDescription="@string/text_image" />
+
+        <EditText
+            android:id="@+id/edit_event_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_weight="2"
+            android:hint="@string/event_title_hint"
+            android:inputType="text"
+            android:maxLines="1"
+            tools:ignore="LabelFor" />
+    </LinearLayout>
+
+    <ScrollView
+        android:id="@+id/scroll_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:gravity="center">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/img_title"
-                    android:contentDescription="@string/text_image" />
-
-                <EditText
-                    android:id="@+id/edit_event_title"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_weight="2"
-                    android:hint="@string/event_title_hint"
-                    android:inputType="text"
-                    android:maxLines="1"
-                    tools:ignore="LabelFor" />
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -443,8 +446,17 @@
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
-                                    android:text="@string/low"
+                                    android:text="@string/not_at_all"
+                                    android:textAlignment="viewStart"
                                     android:textColor="@color/slvl0_color"
+                                    android:textSize="15sp" />
+
+                                <TextView
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:text="@string/low"
+                                    android:textAlignment="center"
                                     android:textSize="15sp" />
 
                                 <TextView
@@ -461,9 +473,18 @@
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
                                     android:text="@string/high"
+                                    android:textAlignment="center"
+                                    android:textSize="15sp" />
+
+                                <TextView
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:text="@string/extreme"
                                     android:textAlignment="viewEnd"
                                     android:textColor="@color/slvl2_color"
                                     android:textSize="15sp" />
+
                             </LinearLayout>
 
                         </LinearLayout>
@@ -600,13 +621,13 @@
                             android:layout_marginBottom="5dp"
                             android:layout_weight="5"
                             android:background="@drawable/bg_solid_wrap"
+                            android:hint="@string/selected_interv_hint"
                             android:maxLines="2"
+                            android:onClick="editInterventionClick"
                             android:padding="10dp"
                             android:textColor="@color/black"
-                            android:onClick="editInterventionClick"
                             android:textSize="15sp"
                             android:textStyle="bold"
-                            android:hint="@string/selected_interv_hint"
                             android:typeface="monospace" />
 
                     </LinearLayout>
